tests/suite/snapshots/suite__check__tests__check__bad_class_shadowing_3.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_class_shadowing_3.xi:2:8]
   │
 2 │     a, a: int
   ·     ┬  ┬  
   ·     ╰───── Previous definition here
   ·        │  
   ·        ╰── Name already bound in environment
───╯

