tests/suite/snapshots/suite__check__tests__check__bad_early_bind.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_early_bind.xi:2:12]
   │
 2 │   a: int = a
   ·            ┬  
   ·            ╰── Unbound variable a
───╯

